--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -10,7 +10,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        {% snippet 'home/snippets/featured_groups.html' %}
+        {% snippet 'home/snippets/featured_groups.html', getGroups=true %}
       </div>
     </div>
   </div>
