--- a/ckanext/amplus/templates/package/search.html
+++ b/ckanext/amplus/templates/package/search.html
@@ -3,7 +3,7 @@
 {% ckan_extends %}
 
 {% block primary_content %}
-  {% snippet 'home/snippets/featured_groups.html', items=4 %}
+  {% snippet 'home/snippets/featured_groups.html', items=4, getGroups=true %}
   {{ super() }}
 {% endblock %}
 
