Add flex basis on resource item 100 and remove hover change shadow

--- a/ckanext/amplus/fanstatic/less/_resource-item.less
+++ b/ckanext/amplus/fanstatic/less/_resource-item.less
@@ -1,3 +1,11 @@
+.resources{
+  .resource-list{
+    .resource-item{
+      width: auto;
+      flex-basis: 100%;
+    }
+  }
+}
 .resource-list {
   .flex;
   .flex-wrap;
@@ -9,6 +17,7 @@
     .flex-align-center;
     .content-item-layout;
     background: @white;
+
 
     .heading {
       .flex;
@@ -34,8 +43,7 @@
     }
 
     &:hover {
-      .hover-box;
-
+    
       .resource-title {
         color: @brand-secondary;
       }
