--- a/ckanext/amplus/templates/snippets/custom_item.html
+++ b/ckanext/amplus/templates/snippets/custom_item.html
@@ -30,7 +30,7 @@
 {% endif %}
 
 {% block featured_item %}
-<a href="{{ url }}" class="media-item group-item module module-narrow module-shallow">
+<a href="{{ url }}" class="group-item module module-narrow module-shallow">
   {% block featured_item_header %}
   {% set truncate=truncate or 0 %}
   {% set truncate_title = truncate_title or 0 %}
@@ -47,17 +47,6 @@
 
     {% endif %}
     {% block featured_item_header_title %}
-      {% if group.type == 'resource' %}
-        {% block resource_item_title %}
-          <object>
-            <a class="heading" href="{{ url }}" title="{{ group.name or group.description }}">
-              <span class="format-label" property="dc:format" data-format="{{ group.format.lower() or 'data' }}">{{ h.get_translated(group, 'format') }}</span>
-              {{ h.popular('views', group.tracking_summary.total, min=10) }}
-            </a>
-          </object>
-        {% endblock %}
-
-      {% endif %}
         <h3 class="group-title">
           {% if group.type == 'datarequest' %}
             {% if group.get('closed', False) %}
@@ -136,64 +125,12 @@
           </div>
       </div>
     {% endif %}
-      {% if group.type == 'resource' %}
-        {% block resource_item_explore %}
-          {% if not url_is_edit %}
-            <object>
-              <div class="dropdown btn-group">
-                <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                  <i class="fa fa-share"></i>
-                  {{ _('Explore') }}
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  {% block resource_item_explore_links %}
-                    <li>
-                      <a href="{{ url }}">
-                        {% if group.has_views %}
-                          <i class="fa fa-bar-chart-o"></i>
-                          {{ _('Preview') }}
-                        {% else %}
-                          <i class="fa fa-info-circle"></i>
-                          {{ _('More information') }}
-                        {% endif %}
-                      </a>
-                    </li>
-                  {% if group.url and h.is_url(group.url) %}
-                    <li>
-                      <a href="{{ group.url }}" class="resource-url-analytics" target="_blank">
-                        {% if group.has_views or group.url_type == 'upload' %}
-                          <i class="fa fa-arrow-circle-o-down"></i>
-                            {{ _('Download') }}
-                        {% else %}
-                          <i class="fa fa-external-link"></i>
-                          {{ _('Go to resource') }}
-                        {% endif %}
-                      </a>
-                    </li>
-                  {% endif %}
-                  {% if can_edit %}
-                     <li>
-                      <a href="{{ h.url_for(controller='package', action='resource_edit', id=pkg.name, resource_id=group.id) }}">
-                        <i class="fa fa-pencil-square-o"></i>
-                        {{ _('Edit') }}
-                      </a>
-                    </li>
-                  {% endif %}
-                  {% endblock %}
-
-                </ul>
-              </div>
-            </object>
-          {% endif %}
-        {% endblock %}
-
-      {% endif %}
+   
         {% if group.user_member %}
           <input name="group_remove.{{ group.id }}" value="{{ _('Remove') }}" type="submit" class="btn btn-danger btn-sm media-edit" title="{{ _('Remove dataset from this group') }}"/>
         {% endif %}
         {% if show_remove %}
           <form method="post"><input type="hidden" value="{{ group.id }}" name="remove_showcase_id" /><input value="{{ _('Remove') }}" type="submit" class="btn btn-danger btn-small media-edit" title="{{ _('Remove dataset from this showcase') }}"/></form>
-      {% endif %}
+        {% endif %}
   </a>
 {% endblock %}
