Rename and add new LESS assets

--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -6,6 +6,7 @@
 @import "_mixins.less";
 @import "_promoted.less";
 
+@import "_featured-item.less";
 @import "_group.less";
 
 @import "_visualize.less";
@@ -22,7 +23,7 @@
 @import "_resource-item.less";
 @import "_fonts.less";
 @import "_buttons.less";
-@import "_facet_list.less";
+@import "_facet-list.less";
 
 @import "_forms.less";
 @import "_footer.less";
