--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -16,6 +16,11 @@
   </div>
 </div>
 
+<div class="stats-container">
+  <p class="group-heading">{{_("Quick stats")}}</p>
+  {% snippet 'home/snippets/stats.html' %} 
+</div>
+
 <div class="group-container">
     <p class="group-heading">{{_("Discover your data")}}</p>
     <div class="container-fluid">
