--- a/ckanext/amplus/templates/home/snippets/stats.html
+++ b/ckanext/amplus/templates/home/snippets/stats.html
@@ -32,12 +32,11 @@
                         <i class="fa fa-th fa-lg" aria-hidden="true"></i>
                     </div>
                     <div class="content">
-                        <strong class="stat-number">{{ h.SI_number_span(stats.group_count) }}</strong>
+                        <span class="stat-number">{{ h.SI_number_span(stats.group_count) }}</span>
                         <p class="stat-title">{{ _('group') if stats.group_count == 1 else _('groups') }}</p>
                     </div>  
                 </a>
             </div>
         </div>
+        {% endblock %}
       </div>
-      {% endblock %}
-</div>
