--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -48,6 +48,7 @@
 @font-size-21: 21px;
 @font-size-22: 22px;
 @font-size-24: 24px;
+@font-size-25: 25px;
 @font-size-40: 40px;
 @font-size-50: 50px;
 
