Refactor in the footer and template html files

--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -17,8 +17,14 @@
 </div>
 
 <div class="stats-container">
-  <p class="group-heading">{{_("Quick stats")}}</p>
-  {% snippet 'home/snippets/stats.html' %} 
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <p class="group-heading">{{_("Quick stats")}}</p>
+        {% snippet 'home/snippets/stats.html' %} 
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="group-container">
