--- a/ckanext/amplus/templates/home/snippets/stats.html
+++ b/ckanext/amplus/templates/home/snippets/stats.html
@@ -15,7 +15,7 @@
                     </div>  
                 </a>
             </div>
-            <div class="stat-content">
+            <div class="stat-content middle">
                 <a href="{{ h.url_for(controller='organization', action='index') }}">
                     <div class="oval">
                         <i class="fa fa-building fa-lg" aria-hidden="true"></i>
