--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -10,7 +10,7 @@
 
 @media (max-width: @breakpoint-lg) {
 
-    .stats-wrapper:before, .stats-wrapper:after {
+    .stats-wrapper:before, .stats-wrapper:after, .middle:before, .middle:after {
       display: none;
     }
 
