--- a/ckanext/amplus/fanstatic/less/_responsive-xs.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-xs.less
@@ -14,4 +14,21 @@
         padding: 100px 10px;
       }
     }
+
+    .stats {
+      height: auto;
+      .stats-wrapper {
+        flex-wrap: wrap;
+        flex-direction: row-reverse;
+        height: auto;
+        .stat-content {
+          width: 300px;
+          padding: @gutter-lg 0;
+          a {
+            width: 100%;
+          }
+        }
+      }
+    }
+
 }
