Changed the position of the validation badge in resource-item

--- a/ckanext/amplus/templates/package/snippets/resource_item.html
+++ b/ckanext/amplus/templates/package/snippets/resource_item.html
@@ -16,3 +16,12 @@
     {% endif %}
 </a>
 {% endblock %}
+
+{% block resource_item_validation_badge %}
+<a class="validation-badge" href="{{ url }}">
+  {{ super() }}
+</a>
+{% endblock %}
+
+
+
