--- a/ckanext/amplus/fanstatic/css/custom.css
+++ b/ckanext/amplus/fanstatic/css/custom.css
@@ -831,9 +831,6 @@ a:active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -843,15 +840,22 @@ a:active {
   border-radius: 0;
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   background: #FFFFFF;
 }
 .resource-list .resource-item .heading {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   margin-right: 1.5rem;
   word-wrap: break-word;
 }
@@ -859,17 +863,21 @@ a:active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
   -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   margin-right: 1.5rem;
+  margin-left: 10px;
 }
 .resource-list .resource-item .display-name {
-  margin-bottom: 0;
+  margin-bottom: 0px;
 }
 .resource-list .resource-item .description {
   margin-top: 0.5rem;
@@ -877,34 +885,44 @@ a:active {
       -ms-flex: 0 1 30%;
           flex: 0 1 30%;
 }
-.resource-list .resource-item:hover .resource-title {
-  color: #9F1A86;
+.resource-list .resource-item .validation-badge {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  margin-left: 10px;
+  background: #555;
+  color: #fff;
+  border-radius: 3px;
+  display: inline-block;
+  font-size: 14px;
+  vertical-align: middle;
+  font-weight: 400;
+  line-height: 1.2;
 }
-.resource-list .resource-item > a {
-  color: #414141;
-  text-decoration: none;
-}
-.resource-list .resource-item .btn-group {
+.resource-list .resource-item .dropdown.btn-group {
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
   position: relative;
+  margin-left: auto;
   top: auto;
   left: auto;
   right: auto;
 }
-.resource-list .resource-item .resource-item-list {
+.resource-list:hover .resource-title {
+  color: #9F1A86;
+}
+.resource-list > a {
+  color: #414141;
+  text-decoration: none;
+}
+.resource-list .resource-item-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-.resource-list .resource-item .format-label {
+.resource-list .format-label {
   position: inherit;
-  -webkit-box-ordinal-group: 0;
-      -ms-flex-order: -1;
-          order: -1;
-}
-.resource-list .validation-badge {
-  position: absolute;
-  bottom: 2rem;
-  left: 3rem;
 }
 .resource-content {
   padding: 2rem 2rem;
@@ -928,6 +946,24 @@ a:active {
   margin-right: auto;
   text-align: center;
   width: 75%;
+}
+@media (max-width: 991px) {
+  .resource-item .btn-group {
+    display: initial;
+  }
+}
+@media (max-width: 1400px) {
+  .validation-badge {
+    display: table;
+    margin-left: 0;
+  }
+}
+@media (max-width: 366px) {
+  .validation-badge {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
 }
 @font-face {
   font-family: "Barlow";
