--- a/ckanext/amplus/fanstatic/less/_forms.less
+++ b/ckanext/amplus/fanstatic/less/_forms.less
@@ -100,3 +100,27 @@
     width: auto;
   }
 }
+
+.tertiary .search-form {
+  flex-direction: column;
+  width: 100%;
+  align-items: flex-start;
+
+  .search-input-group {
+    width: 75%;
+  }
+
+  h2 {
+    width: 75%;
+    padding: 0;
+  }
+
+  .form-control {
+    width: 100%;
+  }
+
+  .form-select {
+    width: 45%;
+  }
+
+}
