--- a/ckanext/amplus/fanstatic/css/custom.css
+++ b/ckanext/amplus/fanstatic/css/custom.css
@@ -1211,28 +1211,21 @@ a:active {
   min-width: auto;
   width: auto;
 }
-.tertiary .search-form {
+.tertiary {
+  float: left;
+}
+.primary .tertiary .search-form {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  margin-top: 4.35rem;
 }
-.tertiary .search-form .search-input-group {
-  width: 75%;
-}
-.tertiary .search-form h2 {
-  width: 75%;
-  padding: 0;
-}
-.tertiary .search-form .form-control {
-  width: 100%;
-}
-.tertiary .search-form .form-select {
-  width: 45%;
+.primary .tertiary .search-form > * {
+  width: unset;
 }
 .footer-container {
   padding: 5rem 0;
