Python3 fixes, move from fanstatic to webassets

--- a/ckanext/amplus/templates/base.html
+++ b/ckanext/amplus/templates/base.html
@@ -2,5 +2,5 @@
 
 {% block styles %}
   {{ super() }}
-  {% resource 'amplus/css/custom.css' %}
+  {% asset 'amplus/amplus-style' %}
 {% endblock %}
