Fix broken link, add required dependencies

--- a/ckanext/amplus/templates/home/snippets/stats.html
+++ b/ckanext/amplus/templates/home/snippets/stats.html
@@ -5,7 +5,7 @@
       {% block stats_group %}
         <div class="stats-wrapper">
             <div class="stat-content">
-                <a href="{{ h.url_for(controller='package', action='search') }}">
+                <a href="{{ h.url_for('dataset.search') }}">
                     <div class="oval">
                         <i class="fa fa-database fa-lg" aria-hidden="true"></i>
                     </div>
