Fix routes generationg in stats.html

--- a/ckanext/amplus/templates/home/snippets/stats.html
+++ b/ckanext/amplus/templates/home/snippets/stats.html
@@ -16,7 +16,7 @@
                 </a>
             </div>
             <div class="stat-content middle">
-                <a href="{{ h.url_for(controller='organization', action='index') }}">
+                <a href="{{ h.url_for('organization.index') }}">
                     <div class="oval">
                         <i class="fa fa-building fa-lg" aria-hidden="true"></i>
                     </div>
@@ -27,7 +27,7 @@
                 </a>
             </div>
             <div class="stat-content">
-                <a href="{{ h.url_for(controller='group', action='index') }}">
+                <a href="{{ h.url_for('group.index') }}">
                     <div class="oval">
                         <i class="fa fa-th fa-lg" aria-hidden="true"></i>
                     </div>
