--- a/ckanext/amplus/templates/footer.html
+++ b/ckanext/amplus/templates/footer.html
@@ -22,8 +22,8 @@
             {% block header_site_navigation_tabs %}
               <h5 class="footer-nav-title">{{ _('Navigation')}}</h5>
               <ul class="list-unstyled footer-nav">
-                {{ h.build_nav_main( ('search', _('Datasets')), ('organizations_index', _('Organizations')),
-                    ('group_index', _('Groups')), ('home.about', _('About')) ) }}
+                {{ h.build_nav_main( ('dataset.search', _('Datasets')), ('organization.index', _('Organizations')),
+                    ('group.index', _('Groups')), ('home.about', _('About')) ) }}
               </ul>
           </div>
             <div class="col-md-4">
