Add option for showing recent blogs on home page

--- a/ckanext/amplus/templates/admin/config.html
+++ b/ckanext/amplus/templates/admin/config.html
@@ -5,6 +5,8 @@
 {% block admin_form %}
   {{ super() }}
 
+  {{ form.select('homepage_blogs', 'field_homepage_blogs', _('Show recent blog posts on Home page'), options=[{'value':'yes', 'text': 'Yes'},{'value':'no', 'text': 'No'}], selected=data.homepage_blogs) }}
+
   {{ form.markdown('footer_links', 'field_footer_links', label=_('Footer Links'), value=data.footer_links, error=error, placeholder=_('Enter a list of links - one per line - to be shown as a list withing the secondary footer navigation. Please format the links with Markdown (i.e. * [Example link](https://www.example.com)).'), classes=['control-full']) }}
 
   {{ form.markdown('social_media_links', 'field_social_media_links', label=_('Social Media Links'), value=data.social_media_links, error=error, placeholder=_('Enter a list of links - one per line - to be shown as a list withing the secondary footer navigation. Please format the links with Markdown (i.e. * [Example link](https://www.example.com)).'), classes=['control-full']) }}
