--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -1106,6 +1106,72 @@ a:active {
 .module-footer {
   border-top: none;
 }
+/* ======================================================
+   Edits should be made to .less files
+   ====================================================== */
+.page-list-item .image {
+  width: 168px;
+  /* hack for default theme */
+}
+.page-list-item .image a {
+  display: block;
+  height: 136px;
+  background-position: center center;
+  background-size: cover;
+}
+.page-list-item h3 a {
+  display: block;
+}
+.blogs {
+  text-align: center;
+  background: #fff;
+  padding: 60px 0px;
+}
+.blogs .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.blogs .row > [class*='col-'] {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.blogs .box {
+  margin: 30px 0px;
+  text-align: left;
+  height: 100%;
+}
+.blogs .item-image {
+  width: 100%;
+  height: 180px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.blogs .item-body {
+  padding: 10px 15px;
+}
+.blogs .media-view {
+  border: none;
+}
+.blogs .media-view:hover {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+@media only screen and (max-width: '990px') {
+  .homepage .blogs {
+    background: red;
+  }
+  .blogs .item-image {
+    height: 200px;
+  }
+}
 .facet {
   font-weight: 600;
 }
