--- a/ckanext/amplus/assets/less/custom.less
+++ b/ckanext/amplus/assets/less/custom.less
@@ -25,6 +25,7 @@
 @import "_fonts.less";
 @import "_buttons.less";
 @import "_facet-list.less";
+@import "_pages.less";
 
 @import "_forms.less";
 @import "_footer.less";
