--- a/ckanext/amplus/templates/home/index.html
+++ b/ckanext/amplus/templates/home/index.html
@@ -1,8 +1,10 @@
-{% asset 'c3charts/main' %}
 {% ckan_extends %}
 
 {% block primary_content %}
 {{ super() }}
+
+{% block featured_charts_wrapper %}
+{% endblock %}
 
 {% set blogs = h.get_recent_blog_posts(4) %}
 
