--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -959,49 +959,49 @@ a:active {
   font-family: "Barlow";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/barlow-latin-400.woff2") format("woff2"), url("../fonts/barlow-latin-400.woff") format("woff");
+  src: url("/base/fonts/barlow-latin-400.woff2") format("woff2"), url("/base/fonts/barlow-latin-400.woff") format("woff");
 }
 @font-face {
   font-family: "Barlow";
   font-style: oblique;
   font-weight: 400;
-  src: url("../fonts/barlow-latin-400italic.woff2") format("woff2"), url("../fonts/barlow-latin-400italic.woff") format("woff");
+  src: url("/base/fonts/barlow-latin-400italic.woff2") format("woff2"), url("/base/fonts/barlow-latin-400italic.woff") format("woff");
 }
 @font-face {
   font-family: "Barlow";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/barlow-latin-500.woff2") format("woff2"), url("../fonts/barlow-latin-500.woff") format("woff");
+  src: url("/base/fonts/barlow-latin-500.woff2") format("woff2"), url("/base/fonts/barlow-latin-500.woff") format("woff");
 }
 @font-face {
   font-family: "Barlow";
   font-style: oblique;
   font-weight: 500;
-  src: url("../fonts/barlow-latin-500italic.woff2") format("woff2"), url("../fonts/barlow-latin-500italic.woff") format("woff");
+  src: url("/base/fonts/barlow-latin-500italic.woff2") format("woff2"), url("/base/fonts/barlow-latin-500italic.woff") format("woff");
 }
 @font-face {
   font-family: "Barlow";
   font-style: normal;
   font-weight: 600;
-  src: url("../fonts/barlow-latin-600.woff2") format("woff2"), url("../fonts/barlow-latin-600.woff") format("woff");
+  src: url("/base/fonts/barlow-latin-600.woff2") format("woff2"), url("/base/fonts/barlow-latin-600.woff") format("woff");
 }
 @font-face {
   font-family: "Barlow";
   font-style: oblique;
   font-weight: 600;
-  src: url("../fonts/barlow-latin-600italic.woff2") format("woff2"), url("../fonts/barlow-latin-600italic.woff") format("woff");
+  src: url("/base/fonts/barlow-latin-600italic.woff2") format("woff2"), url("/base/fonts/barlow-latin-600italic.woff") format("woff");
 }
 @font-face {
   font-family: "Barlow";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/barlow-latin-700.woff2") format("woff2"), url("../fonts/barlow-latin-700.woff") format("woff");
+  src: url("/base/fonts/barlow-latin-700.woff2") format("woff2"), url("/base/fonts/barlow-latin-700.woff") format("woff");
 }
 @font-face {
   font-family: "Barlow";
   font-style: oblique;
   font-weight: 700;
-  src: url("../fonts/barlow-latin-700italic.woff2") format("woff2"), url("../fonts/barlow-latin-700italic.woff") format("woff");
+  src: url("/base/fonts/barlow-latin-700italic.woff2") format("woff2"), url("/base/fonts/barlow-latin-700italic.woff") format("woff");
 }
 .btn {
   border-radius: 0;
