--- a/ckanext/amplus/templates/snippets/custom_item.html
+++ b/ckanext/amplus/templates/snippets/custom_item.html
@@ -17,7 +17,7 @@
 
 <!-- Set url for item -->
 {% if group.type != 'datarequest' %}
-  {% set url = h.url_for(group.type ~ '_read', action='read', id=group.name or group.title) %}
+  {% set url = h.url_for(group.type ~ '_read', id=group.name or group.title) %}
 {% else %}
   {% set url =  h.url_for('datarequests.show', id=group.get('id','')) %}
 {% endif %}
